# VkStarterProject

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  Build.sh  CMakeLists.txt  README.md  imgui.ini
assets/shaders/: HelloTriangle.vert  Particle.comp  Particle.frag  Particle.vert  TexturedCube.vert  TexturedQuad.vert
scripts/: CompileShaders.sh  DownloadAssets.py  DownloadAssets.sh  Format.sh
src/: Application.cpp  Application.h  ImGuiContext.cpp  ImGuiContext.h  RenderData.h  Renderer.cpp  Renderer.h  SystemWindow.cpp  SystemWindow.h  Utils.cpp  Utils.h  VulkanContext.cpp  VulkanContext.h  main.cpp
src/Renderers/: Common.cpp  Common.h  ComputeParticles.cpp  ComputeParticles.h  HelloTriangle.cpp  HelloTriangle.h  MainMenu.cpp  MainMenu.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  RendererBase.cpp  RendererBase.h  TexturedCube.cpp  TexturedCube.h  TexturedQuad.cpp  TexturedQuad.h
src/Vulkan/: Buffer.cpp  Buffer.h  DeletionQueue.cpp  DeletionQueue.h  Descriptor.cpp  Descriptor.h  Image.cpp  Image.h  ImageLoaders.cpp  ImageLoaders.h  ImageView.cpp  ImageView.h  Pipeline.cpp  Pipeline.h  Sampler.cpp  Shader.cpp  Shader.h  Utils.cpp  Utils.h
